--- a/TextileResearchDevelopment/Views/Home/LoginForm.cshtml
+++ b/TextileResearchDevelopment/Views/Home/LoginForm.cshtml
@@ -22,9 +22,9 @@
                 @Html.AntiForgeryToken()
             }
 
-            <form>
-                <input value="E-MAIL" name="Email" type="email" required="" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'E-Mail';}" />
-                <input value="PASSWORD" name="Password" type="password" required="" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'password';}" />
+            <form id="LoginForm">
+                <input value="E-MAIL" name="Email" id="UserName"type="email" required onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'E-Mail';}" />
+                <input value="PASSWORD" name="Password" id="Password"type="password" required onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'password';}" />
                 <span><input type="checkbox" />Remember Me</span>
                 <div class="clear"></div>
                 <input type="submit" value="login" id="loginButton" name="login">
@@ -39,30 +39,32 @@
 
 <script type="text/javascript">
 
-    function DisableBackButtonAllBrowsers() {
+    function DisableBackButtonAllBrowsers()
+    {
         window.history.forward()
     };
     DisableBackButtonAllBrowsers();
     window.onload = DisableBackButtonAllBrowsers;
-    window.onpageshow = function (evts) {
+    window.onpageshow = function (evts)
+    {
         if (evts.persisted)
             DisableBackButtonAllBrowsers();
     };
     window.onunload = function () {
-        void (0)
+        void (0);
     };
 
-    $(document).ready(function () {
+    $(document).ready(function ()
+    {
+        $('#LoginForm').submit(function (e) {
 
-        $('#loginButton').click(function () {
             event.preventDefault();
             debugger;
-            var form = $('#__AjaxAntiForgeryForm');
-            var token = $('input[name="__RequestVerificationToken"]', form).val();
 
-            var userInfo = {
-                "UserName": "a",
-                "Password": "b"
+            var userInfo =
+            {
+                "UserName": $("#UserName").val(),
+                "Password": $("#Password").val()
             }
 
             $.ajax({
@@ -71,9 +73,20 @@
                 dataType: "json",
                 data: AddAntiForgeryToken({ user: userInfo }),
                 success: function (result) {
-                    window.location.href = result.redirecturl;
+                    if (result == "Authenticated")
+                    {
+                        debugger
+                        //var sid = document.cookie.match('sid=([^;]*)')[1];
+                        window.location.href = "/Home/Index";
+                    }
+                    else
+                    {
+                        alert("UserName or Password is incorrect!!!");
+                        return false;
+                    }
                 }
             });
+
         });
 
         AddAntiForgeryToken = function (data) {
